# lobx

./: .dockerignore  .env.example  .gitignore  CORE.md  README.md  deploy.sh  docker-compose.server.yml  docker-compose.yml  run.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  platform_question.yml
.playwright-mcp/: page-2026-04-04T16-42-21-290Z.yml  page-2026-04-04T16-42-27-859Z.yml  page-2026-04-04T16-42-36-108Z.yml  page-2026-04-04T18-05-47-477Z.yml
audits/: 01-router-guards.md  02-state-management.md  03-socketio-patterns.md  04-auth-flow.md  05-component-architecture.md  06-experiment-design.md  07-frontend-stack.md  08-backend-stack.md  09-realtime-comms.md  10-data-persistence.md  11-overall-architecture.md
back/: .dockerignore  pyproject.toml
back/api/: auth.py  endpoints.py  lab_auth.py  reward_aggregation.py  shared.py  socketio_server.py
back/api/routes/: __init__.py  admin.py  auth.py  data.py  questionnaire.py  test.py  trading.py
back/config/: app.yaml  treatments.yaml
back/core/: data_models.py  handlers.py  services.py  session_manager.py  simple_market_handler.py  trader_manager.py  treatment_manager.py
back/tests/: test_cohort_persistence.py  test_market_logging.py  test_reward_calculation.py  test_session_manager_metadata.py  test_treatments.py
back/traders/: __init__.py  base_trader.py  human_trader.py  informed_trader.py  noise_trader.py
back/utils/: calculate_metrics.py  logfiles_analysis.py  utils.py  websocket_utils.py
docker/: Dockerfile.back
front/: index.html  package.json
front/src/: App.vue  (+3 more)
(+148 files in other folders)
