[project]
name = "trading-platform-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi",
    "numpy",
    "pandas",
    "polars",
    "pydantic",
    "pytest",
    "python-socketio[asgi]",
    "pyyaml",
    "sortedcontainers",
    "termcolor",
    "uvicorn",
]
